[package]
name = "unwalk"
edition = "2018"
version = "0.2.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Walk directory recursively to un-gzip files"
documentation = "https://docs.rs/unwalk"
repository = "https://github.com/guangie88/unwalk"
readme = "README.md"
keywords = ["gz", "gzip", "unzip", "walk", "cli"]
categories = ["command-line-utilities", "compression"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "guangie88/unwalk" }
codecov = { repository = "guangie88/unwalk" }

[dependencies]
clap = "2.32.0"
failure = "0.1.4"
serde = "1.0.83"
serde_derive = "1.0.83"
structopt = "0.2.14"
toml = "0.4.10"
unwalk-base = { path = "base", version = "0.2.0" }
unwalk-gz = { path = "gz", version = "0.2.0" }
walkdir = "2.1.4"

[workspace]
members = [
    "base",
    "gz",
]

[[bin]]
name = "unwalk"
path = "src/main.rs"
