[package]
name = "unwalk-base"
edition = "2018"
version = "0.2.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Provides modular features for unwalk"
documentation = "https://docs.rs/unwalk-base"
repository = "https://github.com/guangie88/unwalk"
license-file = "../LICENSE"

[dependencies]
failure = "0.1.4"

[lib]
path = "src/lib.rs"
