[package]
name = "unwalk-gz"
version = "0.2.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Provides un-gzip feature for unwalk"
documentation = "https://docs.rs/unwalk-gz"
repository = "https://github.com/guangie88/unwalk"
license-file = "../LICENSE"

[dependencies]
file = "1.1.2"
filebuffer = "0.4.0"
flate2 = "1.0.6"
unwalk-base = { path = "../base", version = "0.2.0" }

[dev-dependencies]
tempfile = "3.0.5"

[lib]
path = "src/lib.rs"
